--- a/emacs.org
+++ b/emacs.org
@@ -385,6 +385,7 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 
 (projectile-global-mode 1)
 
+(setq projectile-enable-caching t)
 ;; Custom helm grep
 (defun helm-megagrep (targets &optional recurse zgrep exts)
   (let* ((exts (and recurse
@@ -706,6 +707,16 @@ Recognized window header names are: 'comint, 'locals, 'registers,
    #+END_SRC
 
 ** Programming                                :config:behaviour:programming:
+*** Generic
+#+begin_src emacs-lisp
+;;(setq-default tab-width 4)
+
+(setq-default c-basic-offset 4 c-default-style "linux")
+(setq-default tab-width 4 indent-tabs-mode t)
+;;(define-key c-mode-base-map (kbd "RET") 'newline-and-indent)
+
+#+end_src
+
 *** Haskell
  #+begin_src emacs-lisp
 (require 'flymake-haskell-multi)
@@ -718,25 +729,25 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 #+end_src
 *** indent modes
 #+begin_src emacs-lisp
-(defun c-lineup-arglist-tabs-only (ignored)
-  "Line up argument lists by tabs, not spaces"
-  (let* ((anchor (c-langelem-pos c-syntactic-element))
-	 (column (c-langelem-2nd-pos c-syntactic-element))
-	 (offset (- (1+ column) anchor))
-	 (steps (floor offset c-basic-offset)))
-    (* (max steps 1)
-       c-basic-offset)))
+;;(defun c-lineup-arglist-tabs-only (ignored)
+;;  "Line up argument lists by tabs, not spaces"
+;;  (let* ((anchor (c-langelem-pos c-syntactic-element))
+;;	 (column (c-langelem-2nd-pos c-syntactic-element))
+;;	 (offset (- (1+ column) anchor))
+;;	 (steps (floor offset c-basic-offset)))
+;;    (* (max steps 1)
+;;       c-basic-offset)))
 
 
-(add-hook 'c-mode-common-hook
-          (lambda ()
-            ;; Add kernel style
-            (c-add-style
-             "linux-tabs-only"
-             '("linux" (c-offsets-alist
-                        (arglist-cont-nonempty
-                         c-lineup-gcc-asm-reg
-                         c-lineup-arglist-tabs-only))))))
+;;(add-hook 'c-mode-common-hook
+;;          (lambda ()
+;;            ;; Add kernel style
+;;            (c-add-style
+;;             "linux-tabs-only"
+;;             '("linux" (c-offsets-alist
+;;                        (arglist-cont-nonempty
+;;                         c-lineup-gcc-asm-reg
+;;                         c-lineup-arglist-tabs-only))))))
 #+end_src
 
 *** C
@@ -768,17 +779,22 @@ Recognized window header names are: 'comint, 'locals, 'registers,
 
 (add-hook 'c-mode-hook
           (lambda ()
-                (setq indent-tabs-mode t)
-                (c-set-style "linux-tabs-only")))
+                ;;(setq indent-tabs-mode t)
+                ;;(c-set-style "linux-tabs-only")
+)
+)
 
 #+end_src
 
 *** C++
 #+begin_src emacs-lisp
-(add-hook 'c++-mode-hook
-	  (lambda()
-      (setq indent-tabs-mode t)
-      (c-set-style "linux-tabs-only")))
+;;(add-hook 'c++-mode-hook
+;;	  (lambda()
+;;
+;;))
+
+      ;;(setq indent-tabs-mode t)
+      ;;(c-set-style "linux-tabs-only"))
 #+end_src
 
 *** Python
