--- a/emacs.org
+++ b/emacs.org
@@ -1,4 +1,4 @@
-hi#+TITLE: Emacs config
+#+TITLE: Emacs config
 
 * INIT BASICS                                                 :config:basics:
 #+begin_src emacs-lisp
